scenarios are implemented

--- a/aksenov/VMindbooke.Bot/appsettings.json
+++ b/aksenov/VMindbooke.Bot/appsettings.json
@@ -1,5 +1,7 @@
 ﻿{
-    "ServerAddress": "http",
+    "ServerAddress": "http://135.181.101.47",
+    "UserToken": "c127175dde41479ea2a928bd988cb68f",
+    "UserId": 59,
     "LikeLimitForPostToMakeComment": 10,
     "LikeLimitForCommentToMakeReply": 10,
     "LikeLimitForPostToCopy": 10,
