--- a/aksenov/VMindbooke.Bot/VMindbooke.Bot.csproj
+++ b/aksenov/VMindbooke.Bot/VMindbooke.Bot.csproj
@@ -6,6 +6,8 @@
 
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+      <PackageReference Include="Polly" Version="7.2.1" />
+      <PackageReference Include="RestSharp" Version="106.11.7" />
     </ItemGroup>
 
     <ItemGroup>
