13 файлов делают вжуух

--- a/gronin/Lesson4/ShitBot/appsettings.json
+++ b/gronin/Lesson4/ShitBot/appsettings.json
@@ -1,4 +1,5 @@
 ﻿{
-  "GithubToken": "c8626b9fb1a1fbc8fd82076278f8c44e59e78c9b",
-  "ProductHeaderValue":"Octotest"
+  "ApiBaseUrl": "http://135.181.101.47",
+  "UserId":2130,
+  "UserToken": "0ea127b3ce024452bfa8c8eba4908b83"
 }
