Improved config,Added Logging, Implemented Service for continuous farming, seems to be working fine, at least i tested methods separately

--- a/gronin/Lesson4/ShitBot/appsettings.json
+++ b/gronin/Lesson4/ShitBot/appsettings.json
@@ -1,5 +1,12 @@
 ﻿{
   "ApiBaseUrl": "http://135.181.101.47",
   "UserId":2130,
-  "UserToken": "0ea127b3ce024452bfa8c8eba4908b83"
+  "UserToken": "0ea127b3ce024452bfa8c8eba4908b83",
+  "_commentaryBorder": 10,
+  "_replyBorder": 10,
+  "_repostBorder": 10,
+  "_userBorder": 10,
+  "_stopBorder":10,
+  "skip": 10,
+  "take": 5
 }
