--- a/gronin/Lesson4/VmindbookeSDK/VmindbookeSDK.csproj
+++ b/gronin/Lesson4/VmindbookeSDK/VmindbookeSDK.csproj
@@ -1,13 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFrameworks>netstandard2.0;netcoreapp3.1</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="Polly" Version="7.2.1" />
       <PackageReference Include="RestSharp" Version="106.11.7" />
+      <PackageReference Include="Serilog" Version="2.10.1-dev-01249" />
     </ItemGroup>
 
 </Project>
