--- a/aksenov/VMindbooke.Bot/VMindbooke.Bot.csproj
+++ b/aksenov/VMindbooke.Bot/VMindbooke.Bot.csproj
@@ -8,6 +8,8 @@
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="Polly" Version="7.2.1" />
       <PackageReference Include="RestSharp" Version="106.11.7" />
+      <PackageReference Include="Serilog" Version="2.10.1-dev-01249" />
+      <PackageReference Include="Serilog.Sinks.File" Version="5.0.0-dev-00887" />
     </ItemGroup>
 
     <ItemGroup>
