--- a/khazbulatov/RainbowKarma/VMindbooke.RainbowKarma/VMindbooke.RainbowKarma.csproj
+++ b/khazbulatov/RainbowKarma/VMindbooke.RainbowKarma/VMindbooke.RainbowKarma.csproj
@@ -10,7 +10,15 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Hangfire" Version="1.7.15" />
+      <PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.8" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
