--- a/khazbulatov/RainbowKarma/VMindbooke.SDK/VMindbooke.SDK.csproj
+++ b/khazbulatov/RainbowKarma/VMindbooke.SDK/VMindbooke.SDK.csproj
@@ -6,7 +6,11 @@
 
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+      <PackageReference Include="Polly" Version="7.2.1" />
       <PackageReference Include="RestSharp" Version="106.11.7" />
+      <PackageReference Include="Serilog" Version="2.10.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+      <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
     </ItemGroup>
 
 </Project>
