--- a/aksenov/Application/Application.csproj
+++ b/aksenov/Application/Application.csproj
@@ -12,6 +12,8 @@
     <ItemGroup>
       <PackageReference Include="Hangfire.Core" Version="1.7.15" />
       <PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0-rc.1.20451.14" />
+      <PackageReference Include="NETStandard.Library" Version="2.0.3" />
       <PackageReference Include="Serilog" Version="2.10.1-dev-01249" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00839" />
       <PackageReference Include="Serilog.Sinks.File" Version="5.0.0-dev-00887" />
