--- a/panfilkin/CarmaFucker/CarmaFucker.csproj
+++ b/panfilkin/CarmaFucker/CarmaFucker.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
       <PackageReference Include="Hangfire" Version="1.7.14" />
       <PackageReference Include="Hangfire.Core" Version="1.7.14" />
+      <PackageReference Include="Hangfire.MaximumConcurrentExecutions" Version="1.1.0" />
       <PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0-rc.1.20451.14" />
       <PackageReference Include="Serilog" Version="2.10.1-dev-01249" />
@@ -23,6 +24,9 @@
     <ItemGroup>
       <None Update="appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="copiedPostId">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
 
