--- a/aksenov/VMindbooke.Bot/appsettings.json
+++ b/aksenov/VMindbooke.Bot/appsettings.json
@@ -2,11 +2,10 @@
     "ServerAddress": "http://135.181.101.47",
     "UserToken": "c127175dde41479ea2a928bd988cb68f",
     "UserId": 59,
+    "UserName": "Ilya Axenov",
     "LikeLimitForPostToMakeComment": 2,
     "LikeLimitForCommentToMakeReply": 2,
     "LikeLimitForPostToCopy": 2,
     "LikeLimitForUserToCopyPost": 10,
-    "LikeLimitToCompleteProcess": 1000,
-    "LikePeriodFrom": "2020-10-07T16:29:23.556Z",
-    "LikePeriodTo": "2020-10-07T16:29:23.556Z"
+    "LikeLimitToCompleteProcess": 1000
 }
