API refactored Boosting service refactored BoostingClient re-configured

--- a/aksenov/VMindbooke.Bot/appsettings.json
+++ b/aksenov/VMindbooke.Bot/appsettings.json
@@ -1,11 +1,11 @@
 ﻿{
     "ServerAddress": "http://135.181.101.47",
     "UserToken": "c127175dde41479ea2a928bd988cb68f",
-    "UserId": 59,
-    "UserName": "Ilya Axenov",
+    "UserId": -59,
+    "UserName": "Like-booster baby",
     "LikeLimitForPostToMakeComment": 2,
-    "LikeLimitForCommentToMakeReply": 2,
-    "LikeLimitForPostToCopy": 2,
-    "LikeLimitForUserToCopyPost": 10,
-    "LikeLimitToCompleteProcess": 1000
+    "LikeLimitForCommentToMakeReply": 5,
+    "LikeLimitForPostToCopy": 5,
+    "LikeLimitForUserToCopyPost": 2,
+    "LikeLimitToCompleteProcess": 20
 }
