--- a/sharapov/VMindbookeBot/appsettings.json
+++ b/sharapov/VMindbookeBot/appsettings.json
@@ -4,9 +4,10 @@
   "Write Comment Threshold": "2",
   "Reply Comment Threshold": "0",
   "Copy Post Threshold": "2",
-  "Most Daily Liked Post Threshold": "2",
-  "Stop Boost Threshold": "10",
+  "Most Daily Liked Post Threshold": "1",
+  "Stop Boost Threshold": "5",
   "Log File Name": "log.txt",
   "Local": "ru",
-  "Retry": "10"
+  "Retry": "10",
+  "UserIdMaxValue": "1000"
 }
