prototype that compiles

--- a/matyshchak/VMindbooke.Bot/Usage/appsettings.json
+++ b/matyshchak/VMindbooke.Bot/Usage/appsettings.json
@@ -1,8 +1,8 @@
 ﻿{
   "VMindbookeUrl": "http://localhost:5000/",
-  "MinNumberOfLikesToCommentPost": 0,
-  "CommentLikesThresholdForReply": 0,
-  "PostLikesThresholdForStealing": 0,
-  "UserLikesThresholdToStealHisBestPost": 0,
-  "CurrentUserLikesThreshold": 0
+  "MinDailyLikesToCommentPost": 0,
+  "MinDailyLikesToReplyComment": 0,
+  "MinDailyLikesToStealPost": 0,
+  "MinDailyUserLikesToStealHisBestPost": 0,
+  "DailyLikesToStopBoost": 9999
 }
