--- a/matyshchak/VMindbooke.Bot/VMindbookeBooster/VMindbookeBooster.csproj
+++ b/matyshchak/VMindbooke.Bot/VMindbookeBooster/VMindbookeBooster.csproj
@@ -4,4 +4,9 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Hangfire" Version="1.7.15" />
+      <PackageReference Include="Hangfire.Core" Version="1.7.15" />
+    </ItemGroup>
+
 </Project>
