--- a/matyshchak/VMindbooke.Bot/VMindbooke.Bot/VMindbooke.Bot.csproj
+++ b/matyshchak/VMindbooke.Bot/VMindbooke.Bot/VMindbooke.Bot.csproj
@@ -3,19 +3,20 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <RootNamespace>Usage</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Autofac" Version="6.0.0" />
       <PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0-rc.1.20451.14" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0-rc.1.20451.14" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+      <PackageReference Include="Polly" Version="7.2.1" />
+      <PackageReference Include="RestSharp" Version="106.11.7" />
       <PackageReference Include="Serilog" Version="2.10.1-dev-01249" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00839" />
       <PackageReference Include="Serilog.Sinks.File" Version="5.0.0-dev-00887" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\VMindbookeClient\VMindbookeClient.csproj" />
     </ItemGroup>
 
     <ItemGroup>
