--- a/matyshchak/VMindbooke.Bot/VMindbooke.Bot/VMindbooke.Bot.csproj
+++ b/matyshchak/VMindbooke.Bot/VMindbooke.Bot/VMindbooke.Bot.csproj
@@ -8,8 +8,10 @@
 
     <ItemGroup>
       <PackageReference Include="Autofac" Version="6.0.0" />
+      <PackageReference Include="Bogus" Version="31.0.3" />
       <PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0-rc.1.20451.14" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0-rc.1.20451.14" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0-rc.1.20451.14" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="Polly" Version="7.2.1" />
