--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -21,8 +21,8 @@ jobs:
 
         - name: Build
           run: dotnet build --configuration Release
-          working-directory: ./Mindbox.SDK/zenin
+          working-directory: ./zenin/VMindbooke.Bot
 
         - name: Run unit tests
           run: dotnet test --configuration Release
-          working-directory: ./Mindbox.SDK/zenin
+          working-directory: ./zenin/VMindbooke.Bot
