bot refactored to JobContainer; learning di, had to add value types.

--- a/matyshchak/VMindbooke.Bot/VMindbooke.Bot/appsettings.json
+++ b/matyshchak/VMindbooke.Bot/VMindbooke.Bot/appsettings.json
@@ -1,8 +1,8 @@
 ﻿{
   "VMindbookeUrl": "http://localhost:5000/",
-  "MinDailyLikesToCommentPost": 0,
-  "MinDailyLikesToReplyComment": 0,
-  "MinDailyLikesToStealPost": 0,
-  "MinDailyUserLikesToStealHisBestPost": 0,
-  "DailyLikesLimit": 9999
+  "PostLikesToComment": 0,
+  "CommentLikesToReply": 0,
+  "PostLikesToSteal": 0,
+  "UserLikesToStealHisBestPost": 0,
+  "UserLikesLimit": 9999
 }
