--- a/matyshchak/VMindbooke.Bot/VMindbooke.Bot/VMindbooke.Bot.csproj
+++ b/matyshchak/VMindbooke.Bot/VMindbooke.Bot/VMindbooke.Bot.csproj
@@ -13,6 +13,8 @@
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0-rc.1.20451.14" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0-rc.1.20451.14" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0-rc.1.20451.14" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0-rc.1.20451.14" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0-rc.1.20451.14" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="Polly" Version="7.2.1" />
       <PackageReference Include="RestSharp" Version="106.11.7" />
