--- a/matyshchak/VMindbooke.Bot/VMindbooke.Bot/VMindbooke.Bot.csproj
+++ b/matyshchak/VMindbooke.Bot/VMindbooke.Bot/VMindbooke.Bot.csproj
@@ -19,6 +19,7 @@
       <PackageReference Include="Polly" Version="7.2.1" />
       <PackageReference Include="RestSharp" Version="106.11.7" />
       <PackageReference Include="Serilog" Version="2.10.1-dev-01249" />
+      <PackageReference Include="Serilog.Extensions.Autofac.DependencyInjection" Version="2.1.0" />
       <PackageReference Include="Serilog.Settings.Configuration" Version="3.2.0-dev-00244" />
       <PackageReference Include="Serilog.Settings.Json" Version="0.0.0.2" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00839" />
