--- a/matyshchak/VMindbooke.Bot/VMindbooke.Bot/appsettings.json
+++ b/matyshchak/VMindbooke.Bot/VMindbooke.Bot/appsettings.json
@@ -4,5 +4,8 @@
   "CommentLikesToReply": 0,
   "PostLikesToSteal": 0,  
   "UserLikesToStealHisBestPost": 0,
-  "UserLikesLimit": -1
+  "UserLikesLimit": -1,
+  
+  "UserToBoostId": 13,
+  "UserToBoostToken": "4bf3ef665023437296e5ac4428ca0ac9"
 }
